--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ядерка</title>
+    <title>Ядерка</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -40,7 +40,7 @@
     </style>
 </head>
 <body>
-    <h1>ЯДЕРНЫЙ КОНТРОЛЬНЫЙ ЦЕНТР</h1>
+    <h1>Ядерка</h1>
     <p>Выберите цель для ядерного удара:</p>
     
     <select id="countrySelect">
@@ -246,7 +246,7 @@
     </div>
 
     <div class="footer">
-        <p>взрывай уже</p>
+        <p>Ызрывай брат.</p>
     </div>
 
     <script>
@@ -270,9 +270,8 @@
             alert("1");
             alert(`Ядерка отправлена в ${countryName} :)`);
             
-            // Сбрасываем выбор
-            country.selectedIndex = 0;
-            document.getElementById('launchButton').style.display = 'none';
+            // Перекидываем на картинку после последнего алерта
+            window.location.href = "https://avatars.mds.yandex.net/i?id=67b08f5bb58e0d32b027229b43946ca6006bd8de-16344332-images-thumbs&n=13";
         }
     </script>
 </body>
